<resources>
    <string name="app_name">XTB</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_logo">Logo</string>
    <string name="version_code">version: 1.0.0</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="add">新增</string>
    <string name="ferry">摆渡</string>
    <string name="mine">我的</string>

    <string name="task_id">序号</string>
    <string name="task_name">任务名称</string>
    <string name="task_desc">任务描述</string>

    <string name="res_id">序号</string>
    <string name="res_name">资源名称</string>
    <string name="res_type">资源类型</string>
    
    <string name="logout">注销用户</string>
    <string name="information">\t新太博远程控制端，为辽宁科技大学计算机122级学生历时2个月之作，中间可能会有一些不足，本项目由作者长期有效维护。</string>

    <string name="login_account">操作员账户 :</string>
    <string name="login_psd">密\t\t\t\t\t\t\t\t\t码 :</string>

    <string name="current_psd">当前密码 :</string>
    <string name="new_psd">更新密码 :</string>
    <string name="verify_psd">确认密码 :</string>


    <string name="add_files">添加网络文件</string>
    <string name="add_task">添加新的任务</string>
</resources>
