<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/res_id"
        android:textAppearance="@style/list_head"
        />

    <include layout="@layout/vertical_divider_line"></include>

    <TextView
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/res_name"
        android:textAppearance="@style/list_head"
        />

    <include layout="@layout/vertical_divider_line"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/res_type"
        android:textAppearance="@style/list_head"
        />

</LinearLayout>
