<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_tab_bottom"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:background="@color/sky_blue" >

    <TextView
        android:id="@+id/tv_add"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/add"
        android:textAppearance="@style/text_indicator"
        />

    <TextView
        android:id="@+id/tv_ferry"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/ferry"
        android:textAppearance="@style/text_indicator"
        />

    <TextView
        android:id="@+id/tv_mine"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/mine"
        android:textAppearance="@style/text_indicator"
        />

</LinearLayout>